@@ -1,33 +1,34 @@
 # PEERSIM EXAMPLE 1
-# random.seed 1234567890
+
+random.seed 1234567890
+
 simulation.cycles 30
-control.0 peersim.cdsim.Shuffle
 
-overlay.size 50000
-overlay.maxsize 100000
+control.shf peersim.cdsim.Shuffle
+
+network.size 50000
  
-protocol.0 peersim.core.IdleProtocol
-protocol.0.degree 20
+protocol.lnk IdleProtocol
 
-protocol.1 example.aggregation.AverageFunction
-protocol.1.linkable 0
+protocol.avg example.aggregation.AverageFunction
+protocol.avg.linkable lnk
  
-init.0 peersim.dynamics.WireKOut
-init.0.protocol 0
-init.0.k 20
+init.rnd WireKOut
+init.rnd.protocol lnk
+init.rnd.k 20
 
-# UNCOMMENT THE FOLLOWING LINES TO GET A PEAK DISTRIBUTION
-#init.1 example.aggregation.PeakDistributionInitializer
-#init.1.value 10000
-#init.1.at 0
-#init.1.protocol 1
+init.peak example.aggregation.PeakDistributionInitializer
+init.peak.value 10000
+init.peak.protocol avg
 
-# UNCOMMENT THE FOLLOWING LINES TO GET A LINEAR DISTRIBUTION
-init.1 peersim.vector.LinearDistribution
-init.1.protocol 1
-init.1.max 100
-init.1.min 1
+init.lin LinearDistribution
+init.lin.protocol avg
+init.lin.max 100
+init.lin.min 1
 
-control.1 example.aggregation.AverageObserver
-control.1.protocol 1
+# you can change this to select the peak initializer instead
+include.init rnd lin
+
+control.avgo example.aggregation.AverageObserver
+control.avgo.protocol avg
 
